# xs-bevy

./: Cargo.toml  LICENSE  README.md
src/: coordinate_translation.rs  counter.rs  factory_cache.rs  field.rs  grid.rs  grid_iter.rs  kinetic_body.rs  lib.rs  pathing.rs  patterns.rs  position.rs  screen_view.rs  size_2d.rs  todo_list.rs  translation.rs
src/dim2/: collider.rs  mod.rs  movement.rs  vec.rs
src/dim2/grid/: mod.rs  pathing.rs  rect_size.rs  screen_translation.rs
src/dim2/grid/patterns/: cross_pattern.rs  grid_pattern.rs  mod.rs  rectangle_pattern.rs
src/patterns/: adjacent_pattern.rs  cross_pattern.rs  grid_pattern.rs  rectangle_pattern.rs  surrounding_pattern.rs
src/translation/: index_translation.rs  screen_translation.rs
src/two_dimendions/: field.rs  grid.rs  grid_iter.rs  kinetic_body.rs  mod.rs  movement.rs  pathing.rs
src/two_dimendions/grid/: grid_iter.rs  mod.rs  pathing.rs  position.rs  screen_translation.rs  size_2d.rs
src/two_dimendions/grid/patterns/: adjacent_pattern.rs  cross_pattern.rs  grid_pattern.rs  rectangle_pattern.rs  surrounding_pattern.rs
src/two_dimendions/grid/translation/: index_translation.rs  mod.rs  screen_translation.rs
src/two_dimendions/patterns/: adjacent_pattern.rs  cross_pattern.rs  grid_pattern.rs  mod.rs  rectangle_pattern.rs
src/two_dimendions/translation/: index_translation.rs  mod.rs  screen_translation.rs
tests/: factory_cache_tests.rs  iterator_tests.rs  screen_translation_tests.rs  todo_list_tests.rs
