[package]
name = "xs_bevy_core_2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
pathfinding = "3.0"
once_cell = "1.17"
